argocd/apps/echo/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    trust.home.arpa/enabled: "true"
