argocd/apps/echo/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echo
  namespace: echo
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.100.232
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: echo.lab.zerodi.ru
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: echo.lab.zerodi.ru
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: echo-tls
      allowedRoutes:
        namespaces:
          from: Same
