argocd/apps/echo/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: echo
spec:
  parentRefs:
    - name: echo
      sectionName: https
  hostnames:
    - echo.lab.zerodi.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo
          port: 80
