argocd/apps/echo/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: echo
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - echo.home.arpa
      secretName: echo-tls
  rules:
    - host: echo.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
