argocd/apps/echo/resources/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-http-redirect
  namespace: echo
spec:
  parentRefs:
    - name: echo
      sectionName: http
  hostnames:
    - echo.lab.zerodi.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
